--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -87,3 +87,12 @@ h3{
 #price{
     font-size: 16px;
 }
+
+ul li:nth-of-type(1n+4) {display: none;}
+
+/* ul, ul li {
+    list-style-type: disc;
+    display: list-item;
+} */
+
+
