--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,27 +64,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.2/js/mdb.min.js"></script>
-     <script>
-        $('.product-container').click(function(event) {
-            event.preventDefault();
-            //console.log(event)
-            var product = $(event.currentTarget).data();
-            var productPrice = "$" + parseFloat(product.price).toFixed(2);
-            
-            $('#selected-description').text(product.desc);
-            var bullets = product.marketing.split('|');
-            var marketingList = bullets.map(function(bullet) {
-                return '<li>' + bullet + '<li>';
-            });
-            $('#selected-marketing').html(marketingList);
-            $('#data-img').prop("src", product.img);
-            $('#data-price').text(productPrice);
-        })
-
-        $('.cart-btn').click(function(product) {
-            alert("Added " + $('#data-price').text() + " to your cart!");
-        })
-        </script> 
+    <script src="/assets/js/app.js"></script>
+    
 </body>
 
 </html>
