changed anchor to button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,8 +33,6 @@
             <button class="btn btn-lg cart-btn">ADD TO CART</button>
         </div>
 
-
-
     </div>
 
     <div class="product-box">
@@ -53,7 +51,8 @@
                         <div class="product-price">
                             <h3 id="price"><span><strong>$<%= parseFloat(product.networkPrice).toFixed(2) %></strong></span></h3>
                             
-                            <a target="_blank" class="btn btn-primary btn-md view-more" href="">View More</a>
+
+                            <button  class="btn btn-primary btn-md view-more" href="">View More</button>
 
                         </div>
                     </div>
